--- a/README
+++ b/README
@@ -2,30 +2,34 @@ LSST Binary Distribution Installer and Updater
 ==============================================
 
 A quick'n'dirty utility for distributing DM stack binaries using rsync, in
-absence of such functionality in EUPS.
+absence of such functionality in EUPS. 
 
 lsst-distrib detects the OS, checks for prerequisites, and if the user is
 running a known OS, and has all prerequisites installed, rsyncs a pre-built
 binary distribution to the user's machine.
 
-lsst-distrib
-------------
+By default, it installs into /opt/lsst (where the binaries have been built).
+There's an experimental feature to install to an arbitrary directory, but it
+hasn't been exhaustively verified to work (e.g., it's not known if all of
+the code used by the stack is relocatable).
 
-Clones a pre-built binary distribution of the LSST Data Management
-Software Stack.
+The intended workflow for a new installation is:
 
-Usage:
+	curl -O http://moya.dev.lsstcorp.org/lsst-distrib
+	bash lsst-distrib install
 
-        ./bin/lsst-distrib [-h|--help] [update|install] [dest_dir]
+Installing to a non-standard directory:
 
-Running with no command line arguments is equivalent to running
-'lsst-distrib install'.
+	curl -O https://moya.lsst.majuric.org/lsst-distrib
+	bash lsst-distrib install /non/standard/directory
 
-Arguments:
-install		Install the binary distribution of DM stack
-update		Update an existing binary distribution install
+Updating an existing installation:
 
-dest_dir	EXPERIMENTAL: Install the stack to <destdir>, rather
-                than the directory it was originally built in. This
-                is an experimental feature and may cause some
-                misbehavior.
+	setup lsst_distrib_tools
+	lsst-distrib update
+
+For a list of supported platforms, see:
+
+	https://moya.lsst.majuric.org/dmstack/binaries/
+
+.
