--- a/README
+++ b/README
@@ -25,7 +25,7 @@ Installing to a non-standard directory:
 
 Updating an existing installation:
 
-	setup lsst_distrib_tools
+	setup lsst_distrib_tool
 	lsst-distrib update
 
 For a list of supported platforms, see:
